--- a/public/angular/global/default.css
+++ b/public/angular/global/default.css
@@ -1,11 +1,26 @@
-.unresolved {color:red}
-.resolved {font-weight:700}
-body{margin:20px}
-.frm-login {
-    background-color: #e6e6e6;
-    padding: 10px 30px 20px;
-    border-radius: 10px;
-    border: 1px solid black;
-    box-shadow: 10px 10px 5px #aaaaaa;
+.unresolved {
+  color: red;
 }
-.view-pane { border: 1px solid black; width: 700px; min-height: 80px; padding: 15px }
+.resolved {
+  font-weight: 700;
+}
+body {
+  margin: 20px;
+}
+.frm-login {
+  background-color: #e6e6e6;
+  padding: 10px 30px 20px;
+  border-radius: 10px;
+  border: 1px solid black;
+  box-shadow: 10px 10px 5px #aaaaaa;
+}
+.view-pane {
+  border: 1px solid black;
+  width: 700px;
+  min-height: 80px;
+  padding: 15px;
+}
+.modal-header {
+  background-color: #3276b1;
+  color: white;
+}
